{
  "version": 4,
  "terraform_version": "1.8.2",
  "serial": 45,
  "lineage": "14291473-ee2f-b343-8fc9-8cdfb4d4ff0f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e3b69728418efdee",
            "arn": "arn:aws:ec2:us-east-2:345594585471:elastic-ip/eipalloc-0e3b69728418efdee",
            "association_id": "eipassoc-0f0692018697f6a76",
            "domain": "vpc",
            "id": "eipalloc-0e3b69728418efdee",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0d26196c113280ecc",
            "private_dns": "ip-10-0-1-73.us-east-2.compute.internal",
            "private_ip": "10.0.1.73",
            "public_dns": "ec2-18-217-234-49.us-east-2.compute.amazonaws.com",
            "public_ip": "18.217.234.49",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:345594585471:internet-gateway/igw-0565703f35f6489ef",
            "id": "igw-0565703f35f6489ef",
            "owner_id": "345594585471",
            "vpc_id": "vpc-0b7e86ba2d45ce9f1"
          },
          "dependencies": [
            "aws_vpc.vpc_new"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e3b69728418efdee",
            "association_id": "eipassoc-0f0692018697f6a76",
            "connectivity_type": "public",
            "id": "nat-0926b9d1d69e3af42",
            "network_interface_id": "eni-0d26196c113280ecc",
            "private_ip": "10.0.1.73",
            "public_ip": "18.217.234.49",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e7de52a06df3b509"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_subnet.public_subnet_1_new",
            "aws_vpc.vpc_new"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0a1bf9d3bbe59b2b81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0926b9d1d69e3af42",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a1bf9d3bbe59b2b8",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.private_rt",
            "aws_subnet.public_subnet_1_new",
            "aws_vpc.vpc_new"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0565703f35f6489ef",
            "id": "r-rtb-0752faabac1d6871e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0752faabac1d6871e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_vpc.vpc_new"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:345594585471:route-table/rtb-0a1bf9d3bbe59b2b8",
            "id": "rtb-0a1bf9d3bbe59b2b8",
            "owner_id": "345594585471",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0926b9d1d69e3af42",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b7e86ba2d45ce9f1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_new"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:345594585471:route-table/rtb-0752faabac1d6871e",
            "id": "rtb-0752faabac1d6871e",
            "owner_id": "345594585471",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0565703f35f6489ef",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b7e86ba2d45ce9f1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_new"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_1_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09dc75ab618ab55dd",
            "route_table_id": "rtb-0a1bf9d3bbe59b2b8",
            "subnet_id": "subnet-009667617034f925b"
          },
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.private_subnet_1_new",
            "aws_vpc.vpc_new"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_2_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ad4857990686b938",
            "route_table_id": "rtb-0a1bf9d3bbe59b2b8",
            "subnet_id": "subnet-0ea605b1e83bb9de5"
          },
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.private_subnet_2_new",
            "aws_vpc.vpc_new"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_1_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ff6664bcd325c17b",
            "route_table_id": "rtb-0752faabac1d6871e",
            "subnet_id": "subnet-0e7de52a06df3b509"
          },
          "dependencies": [
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet_1_new",
            "aws_vpc.vpc_new"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_2_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c26e31ffeedb4e24",
            "route_table_id": "rtb-0752faabac1d6871e",
            "subnet_id": "subnet-0aef6f747d479774d"
          },
          "dependencies": [
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet_2_new",
            "aws_vpc.vpc_new"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1_new",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:345594585471:subnet/subnet-009667617034f925b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-009667617034f925b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "345594585471",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0b7e86ba2d45ce9f1"
          },
          "dependencies": [
            "aws_vpc.vpc_new"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2_new",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:345594585471:subnet/subnet-0ea605b1e83bb9de5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ea605b1e83bb9de5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "345594585471",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0b7e86ba2d45ce9f1"
          },
          "dependencies": [
            "aws_vpc.vpc_new"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1_new",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:345594585471:subnet/subnet-0e7de52a06df3b509",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e7de52a06df3b509",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "345594585471",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0b7e86ba2d45ce9f1"
          },
          "dependencies": [
            "aws_vpc.vpc_new"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2_new",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:345594585471:subnet/subnet-0aef6f747d479774d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aef6f747d479774d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "345594585471",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0b7e86ba2d45ce9f1"
          },
          "dependencies": [
            "aws_vpc.vpc_new"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_new",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:345594585471:vpc/vpc-0b7e86ba2d45ce9f1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-061a9a2e74e0b0fd8",
            "default_route_table_id": "rtb-0e250fff48233197c",
            "default_security_group_id": "sg-0caac9f72e9e502d5",
            "dhcp_options_id": "dopt-08957332dc862857e",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b7e86ba2d45ce9f1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e250fff48233197c",
            "owner_id": "345594585471"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "app_service_new",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "default/simpletime-services-new",
            "metadata": [
              {
                "generation": 0,
                "name": "simpletime-services-new",
                "namespace": "default",
                "resource_version": "5406",
                "uid": "b3c99e37-9acf-4c11-83d5-7cb753271beb"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "172.20.180.114",
                "cluster_ips": [
                  "172.20.180.114"
                ],
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 32761,
                    "port": 80,
                    "protocol": "TCP",
                    "target_port": "5000"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "simpletime-services-new"
                },
                "session_affinity": "None",
                "type": "LoadBalancer"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "ab3c99e379acf4c1183d57cb753271be-387982343.us-east-2.elb.amazonaws.com"
                      }
                    ]
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "aws_eks_cluster.eks_new",
            "aws_iam_role.eks_role",
            "aws_subnet.private_subnet_1_new",
            "aws_subnet.private_subnet_2_new",
            "aws_subnet.public_subnet_1_new",
            "aws_subnet.public_subnet_2_new",
            "aws_vpc.vpc_new",
            "data.aws_eks_cluster_auth.cluster_auth"
          ]
        }
      ]
    }
  ]
}